--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <title>Friend Finder Survey</title>
 </head>
@@ -33,191 +33,137 @@
                     <div>
                         <h4><strong>Question 1</strong></h4>
                         <h5>I like dogs</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question1"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                        <select class="custom-select mr-sm-2" id="question1">
+                            <option value="1" href="#">1 (Strongly Disagree)</option>
+                            <option value="2" href="#">2</option>
+                            <option value="3" href="#">3</option>
+                            <option value="4" href="#">4</option>
+                            <option value="5" href="#">5 (Strongly Agree)</option>
+                        </select>
 
-                    <div>
-                        <h4><strong>Question 2</strong></h4>
-                        <h5>I like cats</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question2"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
 
-                    <div>
-                        <h4><strong>Question 3</strong></h4>
-                        <h5>I am an outgoing person</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question3"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
                     </div>
+                </div>
 
-                    <div>
-                        <h4><strong>Question 4</strong></h4>
-                        <h5>I would rather stay in and watch a mvie then go partying</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question4"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Question 2</strong></h4>
+                    <h5>I like cats</h5>
+                    <select class="custom-select mr-sm-2" id="question2">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
 
-                    <div>
-                        <h4><strong>Question 5</strong></h4>
-                        <h5>I always say what I feel</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question5"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                    </select>
+                </div>
 
-                    <div>
-                        <h4><strong>Question 6</strong></h4>
-                        <h5>I make friends easily</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question6"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Question 3</strong></h4>
+                    <h5>I am an outgoing person</h5>
+                    <select class="custom-select mr-sm-2" id="question3">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
 
-                    <div>
-                        <h4><strong>Quesiton 7</strong></h4>
-                        <h5>I always look for the silver lining</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question7"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Question 4</strong></h4>
+                    <h5>I would rather stay in and watch a mvie then go partying</h5>
+                    <select class="custom-select mr-sm-2" id="question4">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
 
-                    <div>
-                        <h4><Strong>Question 8</Strong></h4>
-                        <h5>I try to avoid unnecessary conflict</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question8"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Question 5</strong></h4>
+                    <h5>I always say what I feel</h5>
+                    <select class="custom-select mr-sm-2" id="question5">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
 
-                    <div>
-                        <h4><strong>Question 9</strong></h4>
-                        <h5>I can tell when someone is upset</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question9"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Question 6</strong></h4>
+                    <h5>I make friends easily</h5>
+                    <select class="custom-select mr-sm-2" id="question6">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
 
-                    <div>
-                        <h4><strong>Question 10</strong></h4>
-                        <h5>You can always find ways to improve yourself</h5>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle form-control" id="question10"
-                                data-toggle="dropdown">
-                                <span data-bind="label">Select One</span>&nbsp;<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><option value="1" href="#">1 (Strongly Disagree)</a></li>
-                                <li><option value="2" href="#">2</a></li>
-                                <li><option value="3" href="#">3</a></li>
-                                <li><option value="4" href="#">4</a></li>
-                                <li><option value="5" href="#">5 (Strongly Agree)</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div>
+                    <h4><strong>Quesiton 7</strong></h4>
+                    <h5>I always look for the silver lining</h7>
+                        <select class="custom-select mr-sm-2" id="question7">
+                            <option value="1" href="#">1 (Strongly Disagree)</option>
+                            <option value="2" href="#">2</option>
+                            <option value="3" href="#">3</option>
+                            <option value="4" href="#">4</option>
+                            <option value="5" href="#">5 (Strongly Agree)</option>
+                        </select>
+                </div>
 
-                    <div>
-                        <button type="submit" id="submit" class="btn btn-primary btn-lg btn btn-block" value="submit"> <span class="fa fa-check"></span>
-                            Submit
-                        </button>
-                    </div>
+                <div>
+                    <h4><Strong>Question 8</Strong></h4>
+                    <h5>I try to avoid unnecessary conflict</h5>
+                    <select class="custom-select mr-sm-2" id="question8">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
+
+                <div>
+                    <h4><strong>Question 9</strong></h4>
+                    <h5>I can tell when someone is upset</h5>
+                    <select class="custom-select mr-sm-2" id="question9">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
+
+                <div>
+                    <h4><strong>Question 10</strong></h4>
+                    <h5>You can always find ways to improve yourself</h5>
+                    <select class="custom-select mr-sm-2" id="question10">
+                        <option value="1" href="#">1 (Strongly Disagree)</option>
+                        <option value="2" href="#">2</option>
+                        <option value="3" href="#">3</option>
+                        <option value="4" href="#">4</option>
+                        <option value="5" href="#">5 (Strongly Agree)</option>
+                    </select>
+                </div>
+
+                <div>
+                    <button type="submit" id="submit" class="btn btn-primary btn-lg btn btn-block" value="submit">
+                        <span class="fa fa-check"></span>
+                        Submit
+                    </button>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <div id="results-modal" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -228,8 +174,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="friendName"></h2>
-                    <img id="friendimage" src=""
-                        alt="">
+                    <img id="friendimage" src="" alt="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
