--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,148 +22,144 @@
                         Survey Questions
                     </h2>
                     <hr>
-                    <div>
-                        <h4><strong>About You</strong></h4>
-                        <h5>Name (required)</h5>
-                        <input type="text" id="name" class="control-form">
-                        <h5>Link to Photo Image (required)</h5>
-                        <input type="text" id="imageLink" class="control-form">
-                    </div>
-                    <hr>
-                    <div>
-                        <h4><strong>Question 1</strong></h4>
-                        <h5>I like dogs</h5>
-                        <select class="custom-select mr-sm-2" id="question1">
-                            <option value="1" href="#">1 (Strongly Disagree)</option>
-                            <option value="2" href="#">2</option>
-                            <option value="3" href="#">3</option>
-                            <option value="4" href="#">4</option>
-                            <option value="5" href="#">5 (Strongly Agree)</option>
-                        </select>
+                    <form>
+                        <div>
+                            <h4><strong>About You</strong></h4>
+                            <h5>Name (required)</h5>
+                            <input type="text" id="name" class="control-form">
+                            <h5>Link to Photo Image (required)</h5>
+                            <input type="text" id="imageLink" class="control-form">
+                        </div>
+                        <hr>
+                        <div>
+                            <h4><strong>Question 1</strong></h4>
+                            <h5>I like dogs</h5>
+                            <select class="custom-select mr-sm-2" id="question1">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
+                        <div>
+                            <h4><strong>Question 2</strong></h4>
+                            <h5>I like cats</h5>
+                            <select class="custom-select mr-sm-2" id="question2">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                    </div>
-                </div>
+                        <div>
+                            <h4><strong>Question 3</strong></h4>
+                            <h5>I am an outgoing person</h5>
+                            <select class="custom-select mr-sm-2" id="question3">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Question 2</strong></h4>
-                    <h5>I like cats</h5>
-                    <select class="custom-select mr-sm-2" id="question2">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
+                        <div>
+                            <h4><strong>Question 4</strong></h4>
+                            <h5>I would rather stay in and watch a mvie then go partying</h5>
+                            <select class="custom-select mr-sm-2" id="question4">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                    </select>
-                </div>
+                        <div>
+                            <h4><strong>Question 5</strong></h4>
+                            <h5>I always say what I feel</h5>
+                            <select class="custom-select mr-sm-2" id="question5">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Question 3</strong></h4>
-                    <h5>I am an outgoing person</h5>
-                    <select class="custom-select mr-sm-2" id="question3">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
+                        <div>
+                            <h4><strong>Question 6</strong></h4>
+                            <h5>I make friends easily</h5>
+                            <select class="custom-select mr-sm-2" id="question6">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Question 4</strong></h4>
-                    <h5>I would rather stay in and watch a mvie then go partying</h5>
-                    <select class="custom-select mr-sm-2" id="question4">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
+                        <div>
+                            <h4><strong>Quesiton 7</strong></h4>
+                            <h5>I always look for the silver lining</h7>
+                                <select class="custom-select mr-sm-2" id="question7">
+                                    <option value="1" href="#">1 (Strongly Disagree)</option>
+                                    <option value="2" href="#">2</option>
+                                    <option value="3" href="#">3</option>
+                                    <option value="4" href="#">4</option>
+                                    <option value="5" href="#">5 (Strongly Agree)</option>
+                                </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Question 5</strong></h4>
-                    <h5>I always say what I feel</h5>
-                    <select class="custom-select mr-sm-2" id="question5">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
+                        <div>
+                            <h4><Strong>Question 8</Strong></h4>
+                            <h5>I try to avoid unnecessary conflict</h5>
+                            <select class="custom-select mr-sm-2" id="question8">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Question 6</strong></h4>
-                    <h5>I make friends easily</h5>
-                    <select class="custom-select mr-sm-2" id="question6">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
+                        <div>
+                            <h4><strong>Question 9</strong></h4>
+                            <h5>I can tell when someone is upset</h5>
+                            <select class="custom-select mr-sm-2" id="question9">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><strong>Quesiton 7</strong></h4>
-                    <h5>I always look for the silver lining</h7>
-                        <select class="custom-select mr-sm-2" id="question7">
-                            <option value="1" href="#">1 (Strongly Disagree)</option>
-                            <option value="2" href="#">2</option>
-                            <option value="3" href="#">3</option>
-                            <option value="4" href="#">4</option>
-                            <option value="5" href="#">5 (Strongly Agree)</option>
-                        </select>
-                </div>
+                        <div>
+                            <h4><strong>Question 10</strong></h4>
+                            <h5>You can always find ways to improve yourself</h5>
+                            <select class="custom-select mr-sm-2" id="question10">
+                                <option value="1" href="#">1 (Strongly Disagree)</option>
+                                <option value="2" href="#">2</option>
+                                <option value="3" href="#">3</option>
+                                <option value="4" href="#">4</option>
+                                <option value="5" href="#">5 (Strongly Agree)</option>
+                            </select>
+                        </div>
 
-                <div>
-                    <h4><Strong>Question 8</Strong></h4>
-                    <h5>I try to avoid unnecessary conflict</h5>
-                    <select class="custom-select mr-sm-2" id="question8">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
-
-                <div>
-                    <h4><strong>Question 9</strong></h4>
-                    <h5>I can tell when someone is upset</h5>
-                    <select class="custom-select mr-sm-2" id="question9">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
-
-                <div>
-                    <h4><strong>Question 10</strong></h4>
-                    <h5>You can always find ways to improve yourself</h5>
-                    <select class="custom-select mr-sm-2" id="question10">
-                        <option value="1" href="#">1 (Strongly Disagree)</option>
-                        <option value="2" href="#">2</option>
-                        <option value="3" href="#">3</option>
-                        <option value="4" href="#">4</option>
-                        <option value="5" href="#">5 (Strongly Agree)</option>
-                    </select>
-                </div>
-
-                <div>
-                    <button type="submit" id="submit" class="btn btn-primary btn-lg btn btn-block" value="submit">
-                        <span class="fa fa-check"></span>
-                        Submit
-                    </button>
+                        <div>
+                            <button type="submit" id="submit" class="btn btn-primary btn-lg btn btn-block" value="submit">
+                                <span class="fa fa-check"></span>
+                                Submit
+                            </button>
+                    </form>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <div id="results-modal" class="modal fade" role="dialog">
         <div class="modal-dialog">
